# Karpal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  book.toml  netlify.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  verification.yml
book-ja/: book.toml
book-ja/book/: 404.html  architecture-full.html  getting-started.html  home.html  index.html  introduction.html  print.html  searcher-09f2665d.js  searchindex-7d64063d.js  searchindex-8d7532d3.js  searchindex-b3e124b9.js  searchindex-d5c5d8d8.js  searchindex-f52c589f.js  toc-732289fc.js  toc-94c6eba9.js  toc.html
book-ja/src/: SUMMARY.md  architecture-full.md  getting-started.md  home.md  introduction.md
book/src/: SUMMARY.md  architecture-full.md  getting-started-full.md  getting-started.md  home.md  introduction.md
docs/: architecture.html  getting-started.html  index.html
docs/css/: style.css
docs/design/: structured-emptiness.md
docs/dev/: contravariant-lifetime-bounds.md  freeap-fold-map-exploration.md  phase-12-trust-model.md  rust-closure-categorical-barrier.md  schubert-intersection-types.md  verification-schema-versioning.md
docs/examples/: cellular-automaton.html  config-pipeline.html  data-transformation.html  domain-model-optics.html  verification-workflow.html  verified-domain-api.html
docs/js/: nav.js
docs/papers/: structured-emptiness-preliminary.md
docs/plans/: 2026-05-19-phase-12-extensions.md  2026-05-24-ai-agent-library-discovery.md  2026-07-19-phase-16b-presheaves.md  2026-07-20-phase-16c-classifier.md  2026-07-20-phase-16d-sheaves.md
docs/reference/: abstract-algebra.html  adjunctions.html  algebraic.html  alt-family.html  arrow-family.html  bifunctor-natural.html  comonad-family.html  contravariant-family.html  effect-system.html  foldable-traversable.html  free-constructions.html  functor-family.html  functor-filter-selective.html  higher-categories.html  invariant.html  macros.html  monoidal-diagrams.html  optics.html  profunctor-family.html  proof-verification.html  recursion-schemes.html  schubert-types.html  verification-ci.html  verification-schemas.html
karpal-algebra/: Cargo.toml  README.md
karpal-algebra/src/: abelian.rs  bounded_lattice.rs  field.rs  group.rs  heyting.rs  lattice.rs  lib.rs  module.rs  ring.rs  semiring.rs  vector_space.rs
karpal-arrow/: Cargo.toml  README.md
karpal-arrow/src/: arrow.rs  arrow_apply.rs  arrow_choice.rs  arrow_loop.rs  arrow_plus.rs  arrow_zero.rs  category.rs  cokleisli.rs  fn_arrow.rs  kleisli.rs  lib.rs  semigroupoid.rs
karpal-core/: Cargo.toml  README.md
karpal-core/src/: adjunction.rs  alt.rs  alternative.rs  applicative.rs  apply.rs  bifunctor.rs  chain.rs  coend.rs  comonad.rs  comonad_env.rs  comonad_store.rs  comonad_traced.rs  compose.rs  conclude.rs  contravariant.rs  contravariant_lt.rs  decide.rs  dinatural.rs  divide.rs  divisible.rs  end.rs  extend.rs  foldable.rs  functor.rs  functor_filter.rs  hkt.rs  invariant.rs  lib.rs  macros.rs  monad.rs  monoid.rs  natural.rs  newtype.rs  plus.rs  selective.rs  semigroup.rs  traversable.rs
karpal-diagram/: Cargo.toml  README.md
karpal-diagram/src/: braiding.rs  coherence.rs  diagram.rs  lib.rs  render.rs  symmetry.rs  tensor.rs  trace.rs
karpal-diagram/tests/: coherence_proofs.rs  diagram_rewriting.rs  trace_trait.rs  verification_integration.rs
karpal-effect/: Cargo.toml  README.md
karpal-effect/src/: classes.rs  except_t.rs  lib.rs  reader_t.rs  state_t.rs  trans.rs  writer_t.rs
karpal-free/: Cargo.toml  README.md
karpal-free/src/: codensity.rs  cofree.rs  coyoneda.rs  day.rs  density.rs  free.rs  free_alt.rs  free_ap.rs  freer.rs  lan.rs  lib.rs  ran.rs  yoneda.rs
karpal-higher/: Cargo.toml  README.md
karpal-higher/src/: bicategory.rs  coherence.rs  enriched.rs  ffunctor.rs  lib.rs  rich_cat.rs  two_category.rs
karpal-index/: Cargo.toml
karpal-index/src/: indexer.rs  main.rs
karpal-optics/: Cargo.toml  README.md
karpal-optics/src/: fold.rs  getter.rs  iso.rs  lens.rs  lib.rs  optic.rs  prism.rs  review.rs  setter.rs  traversal.rs
karpal-profunctor/: Cargo.toml  README.md
karpal-profunctor/src/: choice.rs  fn_profunctor.rs  forget.rs  lib.rs  profunctor.rs  strong.rs  tagged.rs  traversing.rs
karpal-proof/: Cargo.toml  README.md
karpal-proof-derive/: Cargo.toml  README.md
karpal-proof-derive/src/: lib.rs
karpal-proof/src/: law_check.rs  lib.rs  property.rs  proven.rs  refinement.rs  rewrite.rs
karpal-proof/tests/: derive_tests.rs
karpal-recursion/: Cargo.toml  README.md
karpal-recursion/src/: algebra.rs  either.rs  fix.rs  lib.rs  nu.rs  schemes.rs
karpal-schubert-types/: Cargo.toml  README.md
karpal-schubert-types/src/: intersection.rs  lib.rs  lr_enriched.rs  schubert_proven.rs  schubert_type.rs  schubert_typed.rs  verification.rs
karpal-schubert-types/tests/: schubert_core.rs  schubert_proof.rs  schubert_verification.rs
karpal-std/: Cargo.toml  README.md
karpal-std/examples/: cellular_automaton.rs  config_pipeline.rs  data_transformation.rs  domain_model_optics.rs
karpal-std/src/: lib.rs
karpal-topos/: Cargo.toml  README.md
karpal-topos/src/: classifier.rs  lib.rs  limits.rs  presheaf.rs  representable.rs  sheaf.rs  sieve.rs  small_category.rs  topology.rs  yoneda.rs
karpal-verify/: Cargo.toml  README.md
karpal-verify-derive/: Cargo.toml  README.md
karpal-verify-derive/src/: lib.rs
karpal-verify-derive/tests/: export_obligations.rs
karpal-verify/src/: amari.rs  artifact.rs  bundle.rs  command.rs  export.rs  gpu.rs  kani.rs  lean.rs  lib.rs  obligation.rs  proof_bridge.rs  report.rs  runner.rs  session.rs  signature.rs  smt.rs  trust.rs
karpal-verify/tests/: export_golden.rs  export_obligations_macro.rs  provider_execution.rs
karpal-verify/tests/golden/: group_left_inverse.smt2  lean_diagnostics.json  lean_manifest.json  left_distributivity.lean  three_tier_report.json  three_tier_report.md  verification_report.json  verification_report.md
(+135 files in other folders)
