[package]
name = "karpal-algebra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Abstract algebra structures for the Industrial Algebra ecosystem"

[features]
default = ["std"]
std = ["alloc", "karpal-core/std"]
alloc = ["karpal-core/alloc"]

[dependencies]
karpal-core = { version = "0.2.0", path = "../karpal-core", default-features = false }

[dev-dependencies]
proptest.workspace = true
