[package]
name = "karpal-arrow"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Category and Arrow hierarchy for the Industrial Algebra ecosystem"

[dependencies]
karpal-core = { path = "../karpal-core", default-features = false }

[features]
default = ["std"]
std = ["alloc", "karpal-core/std"]
alloc = ["karpal-core/alloc"]

[dev-dependencies]
proptest.workspace = true
