[package]
name = "karpal-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "HKT encoding, Functor, Semigroup, Monoid for the Industrial Algebra ecosystem"

[features]
default = ["std"]
std = []
alloc = []

[dev-dependencies]
proptest.workspace = true
