[package]
name = "karpal-diagram"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Monoidal categories and string diagrams for the Industrial Algebra ecosystem"

[features]
default = ["std"]
std = ["alloc", "karpal-arrow/std"]
alloc = ["karpal-arrow/alloc"]

[dependencies]
karpal-arrow = { version = "0.4.0", path = "../karpal-arrow", default-features = false }

[dev-dependencies]
proptest.workspace = true
