[package]
name = "karpal-effect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Monad transformers and effect system for the Industrial Algebra ecosystem"

[dependencies]
karpal-core = { version = "0.4.0", path = "../karpal-core", default-features = false }

[features]
default = ["std"]
std = ["alloc", "karpal-core/std"]
alloc = ["karpal-core/alloc"]

[dev-dependencies]
proptest.workspace = true
