[package]
name = "karpal-higher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "2-categories, enriched categories, and bicategories for the Industrial Algebra ecosystem"

[dependencies]
karpal-core = { version = "0.5.0", path = "../karpal-core", default-features = false }

[features]
default = ["std"]
std = ["alloc", "karpal-core/std"]
alloc = ["karpal-core/alloc"]
