[package]
name = "karpal-index"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AI-agent library discovery CLI for the Karpal ecosystem"

[[bin]]
name = "karpal-index"
path = "src/main.rs"

[dependencies]
syn = { version = "3", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
