[package]
name = "karpal-std"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Standard prelude re-exports for the Karpal ecosystem"

[dependencies]
karpal-core.workspace = true
karpal-profunctor.workspace = true
karpal-optics.workspace = true
karpal-arrow.workspace = true
karpal-free.workspace = true
karpal-recursion.workspace = true
karpal-algebra.workspace = true
