[package]
name = "karpal-topos"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Topos-theoretic constructions: presheaves, sieves, and the Yoneda lemma for the Industrial Algebra ecosystem"

[dependencies]
karpal-core = { version = "0.7.0", path = "../karpal-core", default-features = false }

[features]
default = ["std"]
std = ["alloc", "karpal-core/std"]
alloc = ["karpal-core/alloc"]

[dev-dependencies]
proptest = "1"
