[package]
name = "karpal-verify-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "Derive and attribute macros for Karpal verification obligation export"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
karpal-verify = { path = "../karpal-verify", default-features = false, features = ["std"] }
