[package]
name = "karpal-verify"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"
description = "External prover bridge and trust model for the Industrial Algebra ecosystem"

[features]
default = ["std", "derive"]
std = ["alloc", "karpal-proof/std"]
alloc = ["karpal-proof/alloc"]
derive = ["std", "dep:karpal-verify-derive"]
amari = ["std", "dep:amari-flynn"]

[dependencies]
karpal-proof = { version = "0.6.1", path = "../karpal-proof", default-features = false }
karpal-verify-derive = { version = "0.6.1", path = "../karpal-verify-derive", optional = true }
amari-flynn = { version = "0.23.0", optional = true }
